--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,6 +43,12 @@ ul, ol, dl, figure,
 img {
     max-width: 100%;
     vertical-align: middle;
+
+        padding: 15px 15px 0;
+        background-color: white;
+        box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+        -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
+        -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
 }
 
 
@@ -201,4 +207,10 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+
+strong {
+
+    font-weight: bold;
 }
