--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,8 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
+$title-spacing-unit: 30px;
+
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
@@ -22,7 +24,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    1050px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
