--- a/assets/themes/Snail/css/main.css
+++ b/assets/themes/Snail/css/main.css
@@ -1369,5 +1369,42 @@ a.action-icon.action-solution {
 
 	position: fixed;
 
-
 }
+
+
+.the-article table {
+	border: 1px solid lightgray; /* No more visible border */
+}
+
+
+.the-article th {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+
+.the-article td, th {
+
+	height: 30px;
+}
+
+.the-article th {
+	background: #DFDFDF;  /* Darken header a bit */
+	font-weight: bold;
+}
+
+.the-article td {
+	background: #FAFAFA;
+	text-align: center;
+}
+
+/* Cells in even rows (2,4,6...) are one color */
+.the-article tr:nth-child(even) td { background: #F1F1F1; }
+
+/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */
+.the-article tr:nth-child(odd) td { background: #FEFEFE; }
+
+
+
