Tapiki benchmark analysis

--- a/_includes/themes/Snail/post.html
+++ b/_includes/themes/Snail/post.html
@@ -2,17 +2,22 @@
 	<div class="cont932">
 	<div id="journal-articles-block">
 		<div class="journal-article">
-			<div class="journal-post-info">
-				<div class="journal-cat-box">
-				{% assign categories_list = page.categories %}
-				{% assign category = categories_list.first %}
-				{% include themes/Snail/category.html %}
-				{% assign categories_list = nil %}
-				</div>
-			</div>
 			<div class="journal-body">
 				<h1 class="journal-title">{{ page.title }}<span class="author">{% if page.tagline %}{{page.tagline}}{% endif %}</span>
 				</h1>
+				<div>
+					<div style="display: inline-block;">
+						{{ page.date | date: "%-d %B %Y" }}
+					</div> |
+
+					{% assign categories_list = page.categories %}
+					{% assign category = categories_list.first %}
+					{% include themes/Snail/category.html %}
+					{% assign categories_list = nil %}
+
+				</div>
+
+
 				<span class="the-article">
 				{{ content }}
 				</span>
