--- a/_includes/themes/Snail/category.html
+++ b/_includes/themes/Snail/category.html
@@ -1,4 +1,4 @@
-<div class="journal-cat-box">
+<span class="journal-cat-box">
 {% if category[0] == null %}
 <a href="{{ BASE_PATH }}{{ site.JB.categories_path }}#{{ category }}-ref" title="{{ category }}">
 	{{ category }}
@@ -7,4 +7,4 @@
 	{{ category[0] }}
 {% endif %}
 </a>
-</div>
+</span>
