--- a/assets/themes/Snail/css/pages/journal.css
+++ b/assets/themes/Snail/css/pages/journal.css
@@ -68,7 +68,7 @@
 }
 #journal-articles-block .journal-article {
 	clear:both;
-	padding:15px 0 0;
+	padding:60px 0 0;
 	float:left;
 	position:relative;
 	width:932px;
@@ -80,11 +80,18 @@
 }
 #journal-articles-block .journal-article .journal-body {
 	padding:0 0 15px 0;
-	width:832px;
+	width:932px;
 	float:left;
 }
 .journal-cat-box {
-	color:#FFF;
+	background: #c0c0c0;
+	color: #FFF;
+	padding: 3px 6px;
+	border-radius: 3px;
+	font-size: 14px;
+	display: inline-block;
+
+	/*color:#FFF;
 	text-transform: capitalize;
 	text-align: center;
 	font-weight:bold;
@@ -94,11 +101,12 @@
 	height:49px;
 	background:url('../../img/journal/category-icons/other.png');
 	line-height:49px;
-	text-overflow: ellipsis;
+	text-overflow: ellipsis;*/
 }
 .journal-cat-box a {
 	color:#FFF;
 }
+
 #journal-articles-block .journal-article .journal-body span.teaser,#journal-articles-block .journal-article .journal-body span.the-article {
 	padding: 5px 0;
 	line-height:19px;
@@ -142,7 +150,6 @@
 }
 #journal-articles-block span.readmore {
 	margin:3px 0 0;
-	float:left;
 }
 #journal-articles-block span.readmore a,#journal-articles-block span.draft-notice {
 	display:inline-block;
@@ -169,23 +176,23 @@
 }
 #journal-articles-block p {
 	line-height: 1.8em;
-	padding:5px 0;
+	/*padding:5px 0;*/
 }
 #journal-articles-block .the-article h2,#journal-articles-block .the-article h2 a {
-	font-size: 25px;
+	font-size: 24px;
 	font-weight: 600;
 	color:#333;
-	padding: 20px 0 20px;
+	padding: 30px 0 10px;
 }
 #journal-articles-block .the-article h1 {
 	font-size: 30px;
 	font-weight: 600;
-	padding: 25px 0 25px;
+	padding: 30px 0 10px;
 }
 #journal-articles-block .the-article h3 {
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 600;
-	padding: 15px 0 15px;
+	padding: 15px 0 10px;
 }
 
 #journal-articles-block .the-article p {
