--- a/_includes/themes/Snail/default.html
+++ b/_includes/themes/Snail/default.html
@@ -13,12 +13,15 @@
 	
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/jquery.fancybox.css">
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/main.css">
+	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/main.css">
+
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/pages/journal.css">
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/team.css">
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/static.css">
+
 	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/errors.css">
-	<link rel="stylesheet" href="{{ ASSET_PATH }}/google-code-prettify/prettify.css">
-	
+	<link rel="stylesheet" href="{{ ASSET_PATH }}/css/monokai.css">
+
 	<link rel="shortcut icon" href="{{ ASSET_PATH }}/img/favicon.ico">
 	
 	<script type="text/javascript" src="{{ ASSET_PATH }}/js/jquery.min.js"></script>
@@ -27,14 +30,8 @@
 	{% else %}
 	<script type="text/javascript" src="{{ ASSET_PATH }}/js/loadmore.js"></script>
 	{% endif %}
-	<script type="text/javascript" src="{{ ASSET_PATH }}/google-code-prettify/prettify.js"></script>
-	
-	<script type="text/javascript">
-	  $(function(){
-		$("pre code").addClass("prettyprint linenums");
-		prettyPrint();
-	  });
-	</script>
+
+
 	
 <!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
